--- a/Lobby/plugins/ServersNPC/config.json
+++ b/Lobby/plugins/ServersNPC/config.json
@@ -1,10 +1,10 @@
 {
-  "SAVE_NPCS_DELAY_SECONDS": 600,
-  "DEBUG_ENABLED": true,
   "VIEW_DISTANCE": 32,
   "ANIMATION_RGB": false,
-  "REPLACE_SYMBOL": "-",
-  "MAX_PATH_LOCATIONS": 500,
+  "SAVE_NPCS_DELAY_SECONDS": 600,
+  "DEBUG_ENABLED": true,
   "LINE_SPACING": 0.3,
-  "NAMING_METHOD": "DEFAULT"
+  "NAMING_METHOD": "DEFAULT",
+  "REPLACE_SYMBOL": "-",
+  "MAX_PATH_LOCATIONS": 500
 }
