--- a/Lobby/server.properties
+++ b/Lobby/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Jul 08 14:59:13 BRT 2023
+#Sat Jul 08 16:33:01 BRT 2023
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -18,7 +18,7 @@ difficulty=peaceful
 network-compression-threshold=256
 max-tick-time=60000
 require-resource-pack=false
-max-players=20
+max-players=200
 use-native-transport=true
 online-mode=false
 enable-status=true
@@ -29,7 +29,7 @@ view-distance=10
 max-build-height=256
 server-ip=
 resource-pack-prompt=
-allow-nether=true
+allow-nether=false
 server-port=25566
 enable-rcon=false
 sync-chunk-writes=true
