--- a/survival/plugins/ServersNPC/config.json
+++ b/survival/plugins/ServersNPC/config.json
@@ -1,10 +1,10 @@
 {
+  "LINE_SPACING": 0.3,
   "MAX_PATH_LOCATIONS": 500,
   "REPLACE_SYMBOL": "-",
-  "DEBUG_ENABLED": true,
-  "LINE_SPACING": 0.3,
-  "VIEW_DISTANCE": 32,
-  "NAMING_METHOD": "DEFAULT",
   "ANIMATION_RGB": false,
-  "SAVE_NPCS_DELAY_SECONDS": 600
+  "NAMING_METHOD": "DEFAULT",
+  "DEBUG_ENABLED": true,
+  "SAVE_NPCS_DELAY_SECONDS": 600,
+  "VIEW_DISTANCE": 32
 }
