--- a/survival/plugins/EcoJobs/lang.yml
+++ b/survival/plugins/EcoJobs/lang.yml
@@ -1,30 +1,30 @@
 messages:
-  prefix: "&#964B00&lEcoJobs&r &8» &r"
-  no-permission: "&cYou don't have permission to do this!"
-  not-player: "&cThis command must be run by a player"
-  invalid-command: "&cUnknown subcommand!"
-  reloaded: "Reloaded!"
+  prefix: "&#964B00&lJobs&r &8» &r"
+  no-permission: "&cVocê não tem permissão para fazer isso!"
+  not-player: "&cEste comando deve ser administrado por um jogador"
+  invalid-command: "&cSubcomando desconhecido!"
+  reloaded: "Recarregada!"
 
-  needs-player: "&cYou must specify a player!"
-  gave-xp: "&fYou have given &a%xp% &fXP to %player%&f's %job%&f!"
-  reset-xp: "&fYou have reset %player%&f's %job%&f XP!"
-  needs-job: "&cYou must specify a job!"
-  need-amount: "&cYou must specify a amount!"
-  invalid-player: "&cInvalid player!"
-  invalid-job: "&cInvalid job!"
-  already-has-job: "&cPlayer already has this job!"
-  doesnt-have-job: "&cPlayer doesn't have this job!"
-  unlocked-job: "&fSuccessfully unlocked the %job%&f job for %player%!"
-  cannot-spawn-job: "&cYou already have this job unlocked!"
-  invalid-amount: "&cInvalid amount!"
-  no-job: "&cYou don't have a job!"
-  joined-job: "&fYou have joined the %job%&f job!"
-  left-job: "&fYou have left the %job%&f job!"
-  job-already-joined: "&cYou already have this job!"
-  cannot-join-job: "&cYou are already in too many jobs, please leave one!"
-  cant-leave-job: "&cYou can't leave the %job%&f job!"
-  dont-have-job: "&cYou don't have this job unlocked!"
-  not-in-job: "&cYou are not in this job!"
+  needs-player: "&cVocê deve especificar um jogador!"
+  gave-xp: "&fVocê deu &a%xp% &fXP to %player%&f %job%&f!"
+  reset-xp: "&fVocê tem redefinição %player%&f's %job%&f XP!"
+  needs-job: "&cVocê deve especificar um trabalho!"
+  need-amount: "&cVocê deve especificar um valor!"
+  invalid-player: "&cJogador inválido!"
+  invalid-job: "&cTrabalho inválido!"
+  already-has-job: "&cJogador já tem esse trabalho!"
+  doesnt-have-job: "&cO jogador não tem esse trabalho!"
+  unlocked-job: "&fDesbloqueou com sucesso o %job%&f trabalho para %player%!"
+  cannot-spawn-job: "&cVocê já tem esse trabalho desbloqueado!"
+  invalid-amount: "&cMontante inválido!"
+  no-job: "&cVocê não tem um emprego!"
+  joined-job: "&fVocê se juntou ao %job%&f!"
+  left-job: "&fVocê deixou o %job%&f!"
+  job-already-joined: "&cVocê já tem esse trabalho!"
+  cannot-join-job: "&cVocê já está em muitos empregos, por favor deixe um!"
+  cant-leave-job: "&cVocê não pode deixar o %job%&f!"
+  dont-have-job: "&cVocê não tem esse trabalho desbloqueado!"
+  not-in-job: "&cVocê não está neste trabalho!"
 
 menu:
   title: "Jobs"
@@ -32,5 +32,5 @@ menu:
 infinity: "∞"
 
 top:
-  name-empty: "&cEmpty"
+  name-empty: "&cVazia"
   amount-empty: "0"
