--- a/survival/plugins/EcoJobs/jobs/smelter.yml
+++ b/survival/plugins/EcoJobs/jobs/smelter.yml
@@ -1,5 +1,5 @@
-name: "&#4B4736Smelter"
-description: "&8&oLevel up by smelting items"
+name: "&#4B4736Fundidor"
+description: "&8&oSubir de nível, fundindo itens"
 
 unlocked-by-default: true
 
@@ -82,15 +82,15 @@ level-placeholders:
 
 effects-description:
   1:
-    - "&8» &8Earn &a$%money%&8 for each smelted item"
+    - "&8» &8Ganhe &a$%money%&8 Para cada item fundido"
 
 rewards-description:
   1:
-    - "&8» &8Earn &a$%money%&8 for each smelted item"
+    - "&8» &8Ganhe &a$%money%&8 Para cada item fundido"
 
 level-up-messages:
   1:
-    - "&8» &8Earn &a$%money%&8 for each smelted item"
+    - "&8» &8Ganhe &a$%money%&8 Para cada item fundido"
 
 level-commands: [ ]
 
