--- a/survival/plugins/EcoPets/pets/blaze.yml
+++ b/survival/plugins/EcoPets/pets/blaze.yml
@@ -1,5 +1,5 @@
 name: "&#FF6600Blaze"
-description: "&7Earn more XP from killing mobs"
+description: "&7Ganhe mais XP de matar mobs"
 level-xp-requirements:
   - 50
   - 125
@@ -58,7 +58,7 @@ level-placeholders:
     value: "%level% * 2"
 effects-description:
   1:
-    - "&6Â» &7Increased XP gain by %xp_multiplier%%!"
+    - "&6Â» &7Aumento do ganho XP por %xp_multiplier%%!"
 rewards-description: []
 level-up-messages: []
 level-commands: []
@@ -71,11 +71,11 @@ icon: player_head texture:eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dX
 spawn-egg:
   enabled: true # If the pet should have a spawn egg
   item: blaze_spawn_egg unbreaking:1 hide_enchants
-  name: "&#FF6600Blaze &fSpawn Egg"
+  name: "&fOvo de &#FF6600Blaze"
   lore:
     - ""
-    - "&8&oPlace on the ground to"
-    - "&8&ounlock the &#FF6600Blaze pet!"
+    - "&8&oColoque no chão para"
+    - "&8&oDesbloquear o pet &#FF6600Blaze &8&o!"
   craftable: false
   recipe: []
   recipe-permission: ecopets.craft.blaze
