--- a/survival/plugins/EcoPets/pets/mancubus.yml
+++ b/survival/plugins/EcoPets/pets/mancubus.yml
@@ -1,5 +1,5 @@
 name: "&6Mancubus"
-description: "&8&oLevel up by taking damage while on fire"
+description: "&8&oSubir de nível tomando dano enquanto pegou fogo"
 
 level-xp-requirements:
   - 50
@@ -64,15 +64,15 @@ level-placeholders:
 
 effects-description:
   1:
-    - "&8» &8Gives a &a+%ignite_chance%%&8 chance to set enemy on fire"
+    - "&8» &8Dá &a+%ignite_chance%% &8Chance de incendiar o inimigo"
 
 rewards-description:
   1:
-    - "&8» &8Gives a &a+%ignite_chance%%&8 chance to set enemy on fire"
+    - "&8» &8Dá &a+%ignite_chance%% &8Chance de incendiar o inimigo"
 
 level-up-messages:
   1:
-    - "&8» &8Gives a &a+%ignite_chance%%&8 chance to set enemy on fire"
+    - "&8» &8Dá &a+%ignite_chance%% &8Chance de incendiar o inimigo"
 
 level-commands: [ ]
 
@@ -94,11 +94,11 @@ icon: player_head texture:eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dX
 spawn-egg:
   enabled: true # If the pet should have a spawn egg
   item: magma_cube_spawn_egg unbreaking:1 hide_enchants
-  name: "&6Mancubus&f Spawn Egg"
+  name: "&fOvo de &6Mancubus"
   lore:
     - ""
-    - "&8&oPlace on the ground to"
-    - "&8&ounlock the &r&6Mancubus&8&o pet!"
+    - "&8&oColoque no chão para"
+    - "&8&odesbloquear o pet &r&6Mancubus&8&o!"
   craftable: false
   recipe: [ ]
   # recipe-permission: ecopets.craft.mancubus
