--- a/survival/plugins/EcoPets/pets/sea_serpent.yml
+++ b/survival/plugins/EcoPets/pets/sea_serpent.yml
@@ -1,5 +1,5 @@
-name: "&9Sea Serpent"
-description: "&8&oIncrease swimming speed and damage in water. Level up by swimming"
+name: "&9Serpente do mar"
+description: "&8&oAumente a velocidade de natação e danos na água.Subir de nivel nadando"
 
 level-xp-requirements:
   - 50
@@ -67,27 +67,27 @@ level-placeholders:
 
 effects-description:
   1:
-    - "&8» &8Gives a &a+%multiplier%%&8 bonus to"
-    - "   &8melee damage when in water"
+    - "&8» &8Dá &a+%multiplier%%&8 bonus de"
+    - "   &8dano físico quando na água"
   2:
-    - "&8» &8Gives a &a+%multiply_velocity%%&8 bonus to"
-    - "   &8movement speed when in water"
+    - "&8» &8Dá &a+%multiply_velocity%%&8 bonus de"
+    - "   &8velocidade quando na água"
 
 rewards-description:
   1:
-    - "&8» &8Gives a &a+%multiplier%%&8 bonus to"
-    - "   &8melee damage when in water"
+    - "&8» &8Dá &a+%multiplier%%&8 bonus de"
+    - "   &8dano físico quando na água"
   2:
-    - "&8» &8Gives a &a+%multiply_velocity%%&8 bonus to"
-    - "   &8movement speed when in water"
+    - "&8» &8Dá &a+%multiply_velocity%%&8 bonus de"
+    - "   &8velocidade quando na água"
 
 level-up-messages:
   1:
-    - "&8» &8Gives a &a+%multiplier%%&8 bonus to"
-    - "   &8melee damage when in water"
+    - "&8» &8Dá &a+%multiplier%%&8 bonus de"
+    - "   &8dano físico quando na água"
   2:
-    - "&8» &8Gives a &a+%multiply_velocity%%&8 bonus to"
-    - "   &8movement speed when in water"
+    - "&8» &8Dá &a+%multiply_velocity%%&8 bonus de"
+    - "   &8velocidade quando na água"
 
 level-commands: [ ]
 
@@ -111,10 +111,10 @@ icon: player_head texture:eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dX
 spawn-egg:
   enabled: true # If the pet should have a spawn egg
   item: drowned_spawn_egg unbreaking:1 hide_enchants
-  name: "&9Sea Serpent&f Spawn Egg"
+  name: "&fOvo de &9Serpente do mar"
   lore:
     - ""
-    - "&8&oPlace on the ground to"
-    - "&8&ounlock the &r&9Sea Serpent&8&o pet!"
+    - "&8&oColoque no chão para"
+    - "&8&odesbloquear o pet &r&9Serpente do mar&8&o!"
   craftable: false
   recipe: [ ]
