--- a/survival/plugins/EcoPets/pets/skeleton.yml
+++ b/survival/plugins/EcoPets/pets/skeleton.yml
@@ -1,5 +1,5 @@
-name: "<gradient:#F2F2F2>Skeleton</gradient:#DBDBDB>"
-description: "&8&oLevel up by dealing bow damage"
+name: "<gradient:#F2F2F2>Esqueleto</gradient:#DBDBDB>"
+description: "&8&oSubir de nível causando dano com arco"
 
 level-xp-requirements:
   - 50
@@ -62,19 +62,19 @@ level-placeholders:
 
 effects-description:
   1:
-    - "&8» &8Gives a &a+%damage_multiplier%%&8 bonus to"
-    - "   &8bow damage"
+    - "&8» &8Da &a+%damage_multiplier%%&8 bonus para"
+    - "   &8Dano de arco"
 
 rewards-description:
   1:
-    - "&8» &8Gives a &a+%damage_multiplier%%&8 bonus to"
-    - "   &8bow damage"
+    - "&8» &8Da &a+%damage_multiplier%%&8 bonus para"
+    - "   &8Dano de arco"
 
 level-up-messages:
   1:
-    - "&8» &8Gives a &a+%damage_multiplier%%&8 bonus to"
-    - "   &8bow damage"
-
+    - "&8» &8Da &a+%damage_multiplier%%&8 bonus para"
+    - "   &8Dano de arco"
+    
 level-commands: [ ]
 
 effects:
@@ -92,10 +92,10 @@ icon: player_head texture:eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dX
 spawn-egg:
   enabled: true # If the pet should have a spawn egg
   item: skeleton_spawn_egg unbreaking:1 hide_enchants
-  name: "<gradient:#F2F2F2>Skeleton</gradient:#DBDBDB>&f Pet Spawn Egg"
+  name: "&fOvo de <gradient:#F2F2F2>Esqueleto</gradient:#DBDBDB>"
   lore:
     - ""
-    - "&8&oPlace on the ground to"
-    - "&8&ounlock the &r<gradient:#F2F2F2>Skeleton</gradient:#DBDBDB>&8&o pet!"
+    - "&8&oColoque no chão para"
+    - "&8&odesbloquear o pet &r<gradient:#F2F2F2>Esqueleto</gradient:#DBDBDB>&8&o!"
   craftable: false
   recipe: [ ]
