--- a/Lobby/plugins/ServersNPC/config.json
+++ b/Lobby/plugins/ServersNPC/config.json
@@ -1,10 +1,10 @@
 {
-  "DEBUG_ENABLED": true,
-  "LINE_SPACING": 0.3,
-  "NAMING_METHOD": "DEFAULT",
-  "REPLACE_SYMBOL": "-",
+  "VIEW_DISTANCE": 32,
   "SAVE_NPCS_DELAY_SECONDS": 600,
-  "ANIMATION_RGB": false,
+  "DEBUG_ENABLED": true,
+  "NAMING_METHOD": "DEFAULT",
   "MAX_PATH_LOCATIONS": 500,
-  "VIEW_DISTANCE": 32
+  "LINE_SPACING": 0.3,
+  "ANIMATION_RGB": false,
+  "REPLACE_SYMBOL": "-"
 }
