--- a/survival/plugins/ServersNPC/config.json
+++ b/survival/plugins/ServersNPC/config.json
@@ -1,10 +1,10 @@
 {
-  "REPLACE_SYMBOL": "-",
-  "MAX_PATH_LOCATIONS": 500,
-  "LINE_SPACING": 0.3,
-  "NAMING_METHOD": "DEFAULT",
   "SAVE_NPCS_DELAY_SECONDS": 600,
+  "MAX_PATH_LOCATIONS": 500,
+  "NAMING_METHOD": "DEFAULT",
+  "LINE_SPACING": 0.3,
+  "ANIMATION_RGB": false,
+  "REPLACE_SYMBOL": "-",
   "VIEW_DISTANCE": 32,
-  "DEBUG_ENABLED": true,
-  "ANIMATION_RGB": false
+  "DEBUG_ENABLED": true
 }
